[project]
name = "stock_market_prediction"
version = "0.1.0"
description = "Stock Market Prediction using ML DL and Foundation Models"
authors = [{name="Rajveer"}]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.1.1",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "statsmodels>=0.14.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.30.0",
    "pyarrow>=13.0.0",
    "optuna>=4.0.0",
    "pyyaml>=6.0.1",
    "joblib>=1.3.2",
    "torch==2.2.2",
    "chronos-forecasting>=0.1.1",
    "umap-learn>=0.5.4",
    "numba>=0.58.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    "yfinance>=0.2.31",
    "tqdm>=4.66.1",
    "accelerate>=0.23.0",
    "transformers>=4.34.0"
]
